--- a/Application/OrleansPoC.Contracts/OrleansPoC.Contracts.csproj
+++ b/Application/OrleansPoC.Contracts/OrleansPoC.Contracts.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="8.1.0"/>
+        <PackageReference Include="Microsoft.Orleans.Sdk" Version="8.1.0"/>
+    </ItemGroup>
+
 </Project>
