--- a/Application/OrleansPoC.Server/OrleansPoC.Server.csproj
+++ b/Application/OrleansPoC.Server/OrleansPoC.Server.csproj
@@ -1,22 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <UserSecretsId>dotnet-OrleansPoC.Worker.MarketData-B1171F03-24FC-401F-ADD1-19F197C58B0A</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
-        <PackageReference Include="Microsoft.Orleans.Client" Version="8.1.0"/>
-        <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
         <PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.1.0" />
+        <PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.1.0"/>
+        <PackageReference Include="Microsoft.Orleans.Server" Version="8.1.0"/>
         <PackageReference Include="Microsoft.Orleans.Streaming" Version="8.1.0" />
+        <PackageReference Include="OrleansDashboard" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\Aspire\OrleansPoC.ServiceDefaults\OrleansPoC.ServiceDefaults.csproj" />
       <ProjectReference Include="..\OrleansPoC.Contracts\OrleansPoC.Contracts.csproj" />
     </ItemGroup>
+
 </Project>
