--- a/Aspire/OrleansPoC.AppHost/OrleansPoC.AppHost.csproj
+++ b/Aspire/OrleansPoC.AppHost/OrleansPoC.AppHost.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Application\OrleansPoC.Server\OrleansPoC.Server.csproj" />
       <ProjectReference Include="..\..\Application\OrleansPoC.Worker.MarketData\OrleansPoC.Worker.MarketData.csproj" />
     </ItemGroup>
 
