--- a/Application/OrleansPoC.WebAPI/OrleansPoC.WebAPI.csproj
+++ b/Application/OrleansPoC.WebAPI/OrleansPoC.WebAPI.csproj
@@ -4,15 +4,17 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <InvariantGlobalization>true</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        
         <PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.2" />
         <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.1.0" />
-        <PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.1.0"/>
-        <PackageReference Include="Microsoft.Orleans.Server" Version="8.1.0"/>
         <PackageReference Include="Microsoft.Orleans.Streaming" Version="8.1.0" />
-        <PackageReference Include="OrleansDashboard" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.1.0"/>
     </ItemGroup>
 
     <ItemGroup>
