--- a/Application/OrleansPoC.WebAPI/OrleansPoC.WebAPI.csproj
+++ b/Application/OrleansPoC.WebAPI/OrleansPoC.WebAPI.csproj
@@ -9,12 +9,12 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
+        <PackageReference Include="MinimalApis.Extensions" Version="0.11.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-        
-        <PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Orleans.Client" Version="8.1.0"/>
         <PackageReference Include="Microsoft.Orleans.Clustering.Redis" Version="8.1.0" />
-        <PackageReference Include="Microsoft.Orleans.Streaming" Version="8.1.0" />
-        <PackageReference Include="Microsoft.Orleans.Persistence.Redis" Version="8.1.0"/>
+        <PackageReference Include="Aspire.StackExchange.Redis" Version="8.0.2" />
     </ItemGroup>
 
     <ItemGroup>
